--- a/Control8.csproj
+++ b/Control8.csproj
@@ -62,6 +62,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\View_1.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="View\Report1Page.xaml.cs">
       <DependentUpon>Report1Page.xaml</DependentUpon>
     </Compile>
